fix center alignment of content

--- a/src/style/imports/general.less
+++ b/src/style/imports/general.less
@@ -1,22 +1,19 @@
 .container {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   background-color: #fff;
-  min-width: 430px;
-  min-height: 550px;
+  min-width: 300px;
+  min-height: 300px;
 }
 
 .faded { opacity: .5 }
 
 .gg-content {
   z-index: 1001;
-  max-width: 90%;
-  max-height: 90%;
-  width: 100%;
   position: relative;
+  height: 90%;
+  width: 90%;
+  left: 5%;
   color: #eee;
-  background: transparent;
-  margin-left: -45%;
-  left: 50%;
 
   &.center { text-align: center }
 
